# GhostShell

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
config/: default.toml
src/: app.rs  audit.rs  config.rs  config_watcher.rs  error.rs  main.rs  plugin.rs
src/crypto/: cipher.rs  clipboard.rs  key_hierarchy.rs  keys.rs  mod.rs  playback_engine.rs  pq_crypto.rs  secure_mem.rs  session_recorder.rs
src/decoy/: duress.rs  fake_history.rs  honeypot.rs  mod.rs  panic_key.rs  shell.rs
src/ids/: alert_correlation.rs  alerts.rs  anomaly.rs  biometric_auth.rs  biometrics.rs  command_analyzer.rs  mod.rs  network_monitor.rs  signatures.rs
src/network/: mod.rs  noise_transport.rs  session_sharing.rs  traffic_obfuscation.rs
src/stealth/: anti_forensics.rs  dead_man.rs  mod.rs  phantom.rs  process_cloak.rs  scrollback.rs  stego.rs
src/terminal/: input.rs  layout.rs  mod.rs  pane.rs  pty.rs  renderer.rs  status_bar.rs
