[package]
name = "ghostshell"
version = "0.1.0"
edition = "2021"
authors = ["GhostShell Team"]
description = "Stealth terminal multiplexer with encrypted sessions, decoy shells, and anomaly-based intrusion detection"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
# CLI & Configuration
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
rand = "0.8"
rand_chacha = "0.3"
hmac = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zstd = "0.13"

# Steganography
image = "0.25"
png = "0.17"

# Networking
snow = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error Handling
thiserror = "1"
anyhow = "1"

# Config Hot-Reload
notify = "6"

# Serialization
bincode = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Regex for IDS
regex = "1"

# Base64
base64 = "0.22"

# JSON (for session sharing invites)
serde_json = "1"

# Hostname detection
hostname = "0.4"

# Cross-platform PTY
portable-pty = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "term"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
